fix: Update to prevent shifting due to scrollbar

--- a/@isle-project/components/data-explorer/data_explorer.css
+++ b/@isle-project/components/data-explorer/data_explorer.css
@@ -25,6 +25,7 @@
 }
 
 .data-explorer-fullscreen-output {
+	position: relative;
 	font-size: 32px;
 	overflow: scroll;
 	width: 100%;
