--- a/@isle-project/components/internal/lesson/lesson.css
+++ b/@isle-project/components/internal/lesson/lesson.css
@@ -42,6 +42,11 @@
 	--cp-frame: polygon(0% 0%, 0% 100%, 25% 100%, 25% 25%, 75% 25%, 75% 75%, 25% 75%, 25% 100%, 100% 100%, 100% 0%);
 }
 
+.modal-open {
+	overflow: inherit !important;
+	padding-right: 0 !important;
+}
+
 /* MAIN */
 pre {
 	display: block;
